--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "first 8 of acct_nbr are uniform. acct_nbr contains no duplicates :)\n",
+    "one years worth of transactions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,188 +45,141 @@
     "\n",
     "transaction_checking = pd.read_csv('data/twm_checking_tran.csv', delimiter=';')\n",
     "transaction_credit = pd.read_csv('data/twm_credit_tran.csv', delimiter=';')\n",
-    "transaction_saving = pd.read_csv('data/twm_savings_tran.csv', delimiter=';')"
+    "transaction_saving = pd.read_csv('data/twm_savings_tran.csv', delimiter=';')\n",
+    "\n",
+    "tran_dfs = [transactions,transaction_checking,transaction_credit,transaction_saving]\n",
+    "all_dfs = [customer,account,transactions,account_checking,account_credit,account_saving,transaction_checking,transaction_credit,transaction_saving]\n",
+    "account_number_dfs =[account,transactions,account_credit]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cleaning\n",
+    "### First\n",
+    "* strip white spaces from str columns\n",
+    "* convert dates to comparable date types, and times to just the hour.\n",
+    "* make account numbers uniform\n",
+    "* drop columns\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for col in transactions.select_dtypes('object'):\n",
-    "    transactions[col] = transactions[col].str.strip()\n",
+    "for df in all_dfs:\n",
+    "    for col in df.select_dtypes('object'):\n",
+    "        df[col] = df[col].str.strip()\n",
     "\n",
-    "for col in customer.select_dtypes('object'):\n",
-    "    customer[col] = customer[col].str.strip()\n",
+    "for df in tran_dfs:\n",
+    "    df['tran_time'] = df['tran_time'].astype(str)\n",
+    "    df = df.replace('',np.nan)\n",
+    "    df[(df['tran_time'].str.len() > 6) |\n",
+    "        (df['tran_time'].str.len() == 4) |\n",
+    "        (df['tran_time'].str.len() == 3) |\n",
+    "        (df['tran_time'].str.len() == 2) |\n",
+    "        (df['tran_time'].str.len() == 1)] = np.nan\n",
+    "    df['tran_time'] = pd.to_datetime(df['tran_time'], format='%H%M%S').dt.hour\n",
+    "    df['tran_date'] = pd.to_datetime(df['tran_date'], format='%d.%M.%Y').dt.normalize()\n",
     "\n",
-    "for col in account.select_dtypes('object'):\n",
-    "    account[col] = account[col].str.strip()\n",
+    "for df in account_number_dfs:\n",
+    "    df['acct_nbr'] = df['acct_nbr'].astype(str)\n",
     "\n",
-    "for col in account_checking.select_dtypes('object'):\n",
-    "    account_checking[col] = account_checking[col].str.strip()\n",
+    "    df['acct_nbr'] = np.where(df['acct_nbr'].str.len() == 16, df['acct_nbr'].str[8:],df['acct_nbr'])\n",
     "\n",
-    "for col in account_credit.select_dtypes('object'):\n",
-    "    account_credit[col] = account_credit[col].str.strip()\n",
-    "\n",
-    "for col in account_saving.select_dtypes('object'):\n",
-    "    account_saving[col] = account_saving[col].str.strip()\n",
-    "\n",
-    "for col in transaction_checking.select_dtypes('object'):\n",
-    "    transaction_checking[col] = transaction_checking[col].str.strip()\n",
-    "\n",
-    "for col in transaction_credit.select_dtypes('object'):\n",
-    "    transaction_credit[col] = transaction_credit[col].str.strip()\n",
-    "\n",
-    "for col in transaction_saving.select_dtypes('object'):\n",
-    "    transaction_saving[col] = transaction_saving[col].str.strip()"
+    "    df['acct_nbr'] = df['acct_nbr'].astype(np.int64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cust_id</th>\n",
-       "      <th>acct_nbr</th>\n",
-       "      <th>credit_limit</th>\n",
-       "      <th>credit_rating</th>\n",
-       "      <th>starting_balance</th>\n",
-       "      <th>ending_balance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>4.680000e+02</td>\n",
-       "      <td>4.680000e+02</td>\n",
-       "      <td>468.000000</td>\n",
-       "      <td>468.000000</td>\n",
-       "      <td>468.000000</td>\n",
-       "      <td>468.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>1.362986e+06</td>\n",
-       "      <td>4.561143e+15</td>\n",
-       "      <td>2647.649573</td>\n",
-       "      <td>0.316239</td>\n",
-       "      <td>1123.257521</td>\n",
-       "      <td>1184.885662</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>2.920717e+02</td>\n",
-       "      <td>2.920717e+03</td>\n",
-       "      <td>2293.771202</td>\n",
-       "      <td>1.453930</td>\n",
-       "      <td>1636.254478</td>\n",
-       "      <td>1363.065314</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.362480e+06</td>\n",
-       "      <td>4.561143e+15</td>\n",
-       "      <td>1000.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1.362727e+06</td>\n",
-       "      <td>4.561143e+15</td>\n",
-       "      <td>1000.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>353.187500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>1.362974e+06</td>\n",
-       "      <td>4.561143e+15</td>\n",
-       "      <td>1900.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>568.300000</td>\n",
-       "      <td>1000.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>1.363238e+06</td>\n",
-       "      <td>4.561143e+15</td>\n",
-       "      <td>3000.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1631.635000</td>\n",
-       "      <td>1358.717500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>1.363493e+06</td>\n",
-       "      <td>4.561143e+15</td>\n",
-       "      <td>17300.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>11394.660000</td>\n",
-       "      <td>9500.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            cust_id      acct_nbr  credit_limit  credit_rating  \\\n",
-       "count  4.680000e+02  4.680000e+02    468.000000     468.000000   \n",
-       "mean   1.362986e+06  4.561143e+15   2647.649573       0.316239   \n",
-       "std    2.920717e+02  2.920717e+03   2293.771202       1.453930   \n",
-       "min    1.362480e+06  4.561143e+15   1000.000000       0.000000   \n",
-       "25%    1.362727e+06  4.561143e+15   1000.000000       0.000000   \n",
-       "50%    1.362974e+06  4.561143e+15   1900.000000       0.000000   \n",
-       "75%    1.363238e+06  4.561143e+15   3000.000000       0.000000   \n",
-       "max    1.363493e+06  4.561143e+15  17300.000000      10.000000   \n",
-       "\n",
-       "       starting_balance  ending_balance  \n",
-       "count        468.000000      468.000000  \n",
-       "mean        1123.257521     1184.885662  \n",
-       "std         1636.254478     1363.065314  \n",
-       "min            0.000000        0.000000  \n",
-       "25%            0.000000      353.187500  \n",
-       "50%          568.300000     1000.000000  \n",
-       "75%         1631.635000     1358.717500  \n",
-       "max        11394.660000     9500.000000  "
+       "0             \n",
+       "1        53313\n",
+       "2          834\n",
+       "3             \n",
+       "4             \n",
+       "         ...  \n",
+       "46199         \n",
+       "46200         \n",
+       "46201         \n",
+       "46202         \n",
+       "46203    94214\n",
+       "Name: tran_time, Length: 46204, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "account_credit.describe()"
+    "transaction_checking.tran_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        121656\n",
+       "1        153053\n",
+       "2             0\n",
+       "3             0\n",
+       "4        204521\n",
+       "          ...  \n",
+       "77575    161001\n",
+       "77576         0\n",
+       "77577         0\n",
+       "77578    110209\n",
+       "77579    104027\n",
+       "Name: tran_time, Length: 77580, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transactions.tran_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 611,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69"
+      ]
+     },
+     "execution_count": 611,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer.city_name.value_counts().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +237,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4561143213627090</td>\n",
+       "      <td>13627090</td>\n",
        "      <td>1362709</td>\n",
        "      <td>CC</td>\n",
        "      <td>Y</td>\n",
@@ -286,7 +248,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4561143213628360</td>\n",
+       "      <td>13628360</td>\n",
        "      <td>1362836</td>\n",
        "      <td>CC</td>\n",
        "      <td>Y</td>\n",
@@ -308,7 +270,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4561143213633610</td>\n",
+       "      <td>13633610</td>\n",
        "      <td>1363361</td>\n",
        "      <td>CC</td>\n",
        "      <td>Y</td>\n",
@@ -322,22 +284,22 @@
        "</div>"
       ],
       "text/plain": [
-       "           acct_nbr  cust_id acct_type account_active acct_start_date  \\\n",
-       "0          13628063  1362806      SV               Y       10.12.1995   \n",
-       "1  4561143213627090  1362709      CC               Y        15.3.1993   \n",
-       "2  4561143213628360  1362836      CC               Y        18.3.1992   \n",
-       "3          13633112  1363311      CK               Y         6.7.1995   \n",
-       "4  4561143213633610  1363361      CC               Y        17.6.1994   \n",
+       "   acct_nbr  cust_id acct_type account_active acct_start_date acct_end_date  \\\n",
+       "0  13628063  1362806        SV              Y      10.12.1995           NaN   \n",
+       "1  13627090  1362709        CC              Y       15.3.1993           NaN   \n",
+       "2  13628360  1362836        CC              Y       18.3.1992           NaN   \n",
+       "3  13633112  1363311        CK              Y        6.7.1995           NaN   \n",
+       "4  13633610  1363361        CC              Y       17.6.1994           NaN   \n",
        "\n",
-       "  acct_end_date  starting_balance  ending_balance  \n",
-       "0           NaN           1430.22          284.58  \n",
-       "1           NaN            266.34          496.15  \n",
-       "2           NaN             55.90         1000.00  \n",
-       "3           NaN          11017.13          968.46  \n",
-       "4           NaN            849.37          462.28  "
+       "   starting_balance  ending_balance  \n",
+       "0           1430.22          284.58  \n",
+       "1            266.34          496.15  \n",
+       "2             55.90         1000.00  \n",
+       "3          11017.13          968.46  \n",
+       "4            849.37          462.28  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -450,11 +412,11 @@
       ],
       "text/plain": [
        "   cust_id  acct_nbr  minimum_balance  per_check_fee account_active  \\\n",
-       "0  1362548  13625482             3000           0.00             Y    \n",
-       "1  1362487  13624872             3000           0.00             Y    \n",
-       "2  1363017  13630172             3000           0.00             Y    \n",
-       "3  1362752  13627522              100           0.15             Y    \n",
-       "4  1363282  13632822              100           0.15             Y    \n",
+       "0  1362548  13625482             3000           0.00              Y   \n",
+       "1  1362487  13624872             3000           0.00              Y   \n",
+       "2  1363017  13630172             3000           0.00              Y   \n",
+       "3  1362752  13627522              100           0.15              Y   \n",
+       "4  1363282  13632822              100           0.15              Y   \n",
        "\n",
        "  acct_start_date acct_end_date  starting_balance  ending_balance  \n",
        "0      11.11.1986           NaN           6004.34          569.65  \n",
@@ -464,7 +426,7 @@
        "4        5.3.1988           NaN            133.90           84.18  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +652,7 @@
        "[1075 rows x 10 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -775,9 +737,9 @@
       ],
       "text/plain": [
        "              acct_nbr  cust_id acct_type account_active acct_start_date  \\\n",
-       "766           13630172  1363017      CK               Y        19.3.1994   \n",
-       "949   4561143213630170  1363017      CC               Y         8.2.1995   \n",
-       "1191          13630173  1363017      SV               N        27.4.1994   \n",
+       "766           13630172  1363017        CK              Y       19.3.1994   \n",
+       "949   4561143213630170  1363017        CC              Y        8.2.1995   \n",
+       "1191          13630173  1363017        SV              N       27.4.1994   \n",
        "\n",
        "     acct_end_date  starting_balance  ending_balance  \n",
        "766            NaN           2694.91          147.15  \n",
@@ -785,7 +747,7 @@
        "1191    31.10.1995           2011.02         2901.35  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
