--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -60,6 +60,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# random push test hello ////////////////////////"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Cleaning\n",
     "### First\n",
     "* strip white spaces from str columns\n",
@@ -1038,7 +1046,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py_test_env",
    "language": "python",
    "name": "python3"
   },
@@ -1052,11 +1060,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8a34b3273de5bc47428473d2a098b2b644951547a78dfc045c680f0cd3ff6f5f"
+    "hash": "6eb05ff5f08e5d2301c774ad8a6837cae4f8b061b9b5708f7fb002f42c722a83"
    }
   }
  },
