--- a/1-Cleaning.ipynb
+++ b/1-Cleaning.ipynb
@@ -1,15 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mini Project III"
+    "## Mini Project III - Cleaning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,46 +21,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**NOTES**\n",
-    "\n",
-    "first 8 of acct_nbr are uniform.\n",
-    "\n",
-    "acct_nbr contains no duplicates :)\n",
-    "\n",
-    "one years worth of transactions\n",
-    "\n",
-    "33 states, 69 cities\n",
-    "\n",
-    "Investigate clustering by 1st postal code\n",
-    "\n",
-    "Take absolute value when comparing transaction sum\n",
-    "\n",
-    "**CODES**\n",
-    "\n",
-    "IN - interest\n",
-    "\n",
-    "PM - loan payment\n",
-    "\n",
-    "WD - withdraw\n",
-    "\n",
-    "DP - deposit\n",
-    "\n",
-    "IQ - inquiry (credit bureau)\n",
-    "\n",
-    "Marriage\n",
-    "* 1 = single\n",
-    "* 2 = married\n",
-    "* ?3 = seperated ?\n",
-    "* ?4 = divorced ?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cleaning\n",
-    "### First\n",
+    "### <u>Cleaning</u>\n",
     "* strip white spaces from str columns\n",
     "* convert dates to computable date types, and times to just the hour.\n",
     "* make account numbers uniform\n",
@@ -93,17 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dfs = [customer,account,transactions,account_checking,account_credit,account_saving,transaction_checking,transaction_credit,transaction_saving]\n",
+    "all_dfs = [customer,account,transactions,account_checking,account_credit,account_saving,transaction_checking,transaction_credit,transaction_saving] # pack\n",
     "\n",
     "for i in range(len(all_dfs)):\n",
     "    for col in all_dfs[i].select_dtypes('object'):\n",
     "        all_dfs[i][col] = all_dfs[i][col].str.strip()\n",
     "\n",
-    "customer,account,transactions,account_checking,account_credit,account_saving,transaction_checking,transaction_credit,transaction_saving = all_dfs\n",
+    "customer,account,transactions,account_checking,account_credit,account_saving,transaction_checking,transaction_credit,transaction_saving = all_dfs # unpack\n",
+    "\n",
+    "# to make sure we're not being hurt by deep copies being made.\n",
     "\n",
     "tran_dfs = [transactions,transaction_checking,transaction_credit,transaction_saving]\n",
     "for i in range(len(tran_dfs)):\n",
@@ -129,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,10 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\ncustomer.to_feather(path='created_data/customer.feather')\\naccount.to_feather(path='created_data/account.feather')\\ntransactions.to_feather(path='created_data/transactions.feather')\\n\\naccount_checking.to_feather(path='created_data/account_checking.feather')\\naccount_credit.to_feather(path='created_data/account_credit.feather')\\naccount_saving.to_feather(path='created_data/account_saving.feather')\\n\\ntransaction_checking.to_feather(path='created_data/transaction_checking.feather')\\ntransaction_credit.to_feather(path='created_data/transaction_credit.feather')\\ntransaction_saving.to_feather(path='created_data/transaction_saving.feather')\\n\""
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "'''\n",
     "customer.to_feather(path='created_data/customer.feather')\n",
     "account.to_feather(path='created_data/account.feather')\n",
     "transactions.to_feather(path='created_data/transactions.feather')\n",
@@ -162,22 +138,14 @@
     "\n",
     "transaction_checking.to_feather(path='created_data/transaction_checking.feather')\n",
     "transaction_credit.to_feather(path='created_data/transaction_credit.feather')\n",
-    "transaction_saving.to_feather(path='created_data/transaction_saving.feather')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 300,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "asdf = pd.read_feather('created_data/customer.feather')"
+    "transaction_saving.to_feather(path='created_data/transaction_saving.feather')\n",
+    "'''"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py_test_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -191,11 +159,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "6eb05ff5f08e5d2301c774ad8a6837cae4f8b061b9b5708f7fb002f42c722a83"
+    "hash": "8a34b3273de5bc47428473d2a098b2b644951547a78dfc045c680f0cd3ff6f5f"
    }
   }
  },
