Fixed date error, added some new visualizations and merged tables

--- a/1-Cleaning.ipynb
+++ b/1-Cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "    tran_dfs[i].tran_time = tran_dfs[i].tran_time.replace('',np.nan)\n",
     "    tran_dfs[i].loc[(tran_dfs[i]['tran_time'].str.len() > 6) | (tran_dfs[i]['tran_time'].str.len() <=4),'tran_time'] = np.nan\n",
     "    tran_dfs[i]['tran_time'] = pd.to_datetime(tran_dfs[i]['tran_time'], format='%H%M%S').dt.hour\n",
-    "    tran_dfs[i]['tran_date'] = pd.to_datetime(tran_dfs[i]['tran_date'], format='%d.%M.%Y').dt.normalize()\n",
+    "    tran_dfs[i]['tran_date'] = pd.to_datetime(tran_dfs[i]['tran_date'], format='%d.%m.%Y').dt.normalize()\n",
     "\n",
     "transactions,transaction_checking,transaction_credit,transaction_saving = tran_dfs\n",
     "\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,20 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ncustomer.to_feather(path='created_data/customer.feather')\\naccount.to_feather(path='created_data/account.feather')\\ntransactions.to_feather(path='created_data/transactions.feather')\\n\\naccount_checking.to_feather(path='created_data/account_checking.feather')\\naccount_credit.to_feather(path='created_data/account_credit.feather')\\naccount_saving.to_feather(path='created_data/account_saving.feather')\\n\\ntransaction_checking.to_feather(path='created_data/transaction_checking.feather')\\ntransaction_credit.to_feather(path='created_data/transaction_credit.feather')\\ntransaction_saving.to_feather(path='created_data/transaction_saving.feather')\\n\""
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "customer.to_feather(path='created_data/customer.feather')\n",
@@ -145,7 +134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py_test_env",
    "language": "python",
    "name": "python3"
   },
@@ -159,11 +148,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8a34b3273de5bc47428473d2a098b2b644951547a78dfc045c680f0cd3ff6f5f"
+    "hash": "6eb05ff5f08e5d2301c774ad8a6837cae4f8b061b9b5708f7fb002f42c722a83"
    }
   }
  },
