--- a/1-Cleaning.ipynb
+++ b/1-Cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "    tran_dfs[i].tran_time = tran_dfs[i].tran_time.replace('',np.nan)\n",
     "    tran_dfs[i].loc[(tran_dfs[i]['tran_time'].str.len() > 6) | (tran_dfs[i]['tran_time'].str.len() <=4),'tran_time'] = np.nan\n",
     "    tran_dfs[i]['tran_time'] = pd.to_datetime(tran_dfs[i]['tran_time'], format='%H%M%S').dt.hour\n",
-    "    tran_dfs[i]['tran_date'] = pd.to_datetime(tran_dfs[i]['tran_date'], format='%d.%M.%Y').dt.normalize()\n",
+    "    tran_dfs[i]['tran_date'] = pd.to_datetime(tran_dfs[i]['tran_date'], format='%d.%m.%Y').dt.normalize()\n",
     "\n",
     "transactions,transaction_checking,transaction_credit,transaction_saving = tran_dfs\n",
     "\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "\"\\ncustomer.to_feather(path='created_data/customer.feather')\\naccount.to_feather(path='created_data/account.feather')\\ntransactions.to_feather(path='created_data/transactions.feather')\\n\\naccount_checking.to_feather(path='created_data/account_checking.feather')\\naccount_credit.to_feather(path='created_data/account_credit.feather')\\naccount_saving.to_feather(path='created_data/account_saving.feather')\\n\\ntransaction_checking.to_feather(path='created_data/transaction_checking.feather')\\ntransaction_credit.to_feather(path='created_data/transaction_credit.feather')\\ntransaction_saving.to_feather(path='created_data/transaction_saving.feather')\\n\""
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
