--- a/1-Cleaning.ipynb
+++ b/1-Cleaning.ipynb
@@ -134,7 +134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py_test_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -148,11 +148,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "6eb05ff5f08e5d2301c774ad8a6837cae4f8b061b9b5708f7fb002f42c722a83"
+    "hash": "8a34b3273de5bc47428473d2a098b2b644951547a78dfc045c680f0cd3ff6f5f"
    }
   }
  },
