--- a/1-Cleaning.ipynb
+++ b/1-Cleaning.ipynb
@@ -85,7 +85,6 @@
     "\n",
     "for df in account_number_dfs:\n",
     "    df['acct_nbr'] = df['acct_nbr'].astype(str)\n",
-    "\n",
     "    df['acct_nbr'] = np.where(df['acct_nbr'].str.len() == 16, df['acct_nbr'].str[8:],df['acct_nbr'])\n",
     "\n",
     "account,transactions,account_credit = account_number_dfs"
@@ -116,7 +115,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
     "customer.to_feather(path='created_data/customer.feather')\n",
     "account.to_feather(path='created_data/account.feather')\n",
     "transactions.to_feather(path='created_data/transactions.feather')\n",
@@ -127,8 +125,7 @@
     "\n",
     "transaction_checking.to_feather(path='created_data/transaction_checking.feather')\n",
     "transaction_credit.to_feather(path='created_data/transaction_credit.feather')\n",
-    "transaction_saving.to_feather(path='created_data/transaction_saving.feather')\n",
-    "'''"
+    "transaction_saving.to_feather(path='created_data/transaction_saving.feather')"
    ]
   }
  ],
