--- a/2-EDA.ipynb
+++ b/2-EDA.ipynb
@@ -35,6 +35,7 @@
     "-    WD - withdraw\n",
     "-    DP - deposit\n",
     "-    IQ - inquiry (credit bureau)\n",
+    "-    TR - Transfer\n",
     "\n",
     "Marriage:\n",
     "* 1 = single\n",
