--- a/ML_experiments.ipynb
+++ b/ML_experiments.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import statsmodels.tools as sm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +38,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>const</th>\n",
        "      <th>income</th>\n",
        "      <th>age</th>\n",
        "      <th>num_cred_trans</th>\n",
@@ -51,6 +53,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
        "      <td>50890.0</td>\n",
        "      <td>33.0</td>\n",
        "      <td>32.0</td>\n",
@@ -66,14 +69,14 @@
        "</div>"
       ],
       "text/plain": [
-       "    income   age  num_cred_trans  num_save_trans  num_cheq_trans  \\\n",
-       "0  50890.0  33.0            32.0            26.0            99.0   \n",
+       "   const   income   age  num_cred_trans  num_save_trans  num_cheq_trans  \\\n",
+       "0    1.0  50890.0  33.0            32.0            26.0            99.0   \n",
        "\n",
        "   avg_cheq_amt  avg_save_amt  avg_cred_amt  money_gained  \n",
        "0     -2.474646     18.550769     60.895625   -450.503333  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,12 +85,13 @@
     "x = pd.read_feather('created_data/final_transaction_cluster.feather')\n",
     "y = x.cluster\n",
     "x.drop(['cust_id','cluster'],inplace=True,axis=1)\n",
+    "x = sm.add_constant(x)\n",
     "x.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy:  63.1578947368421\n"
+      "accuracy:  56.390977443609025\n"
      ]
     },
     {
@@ -135,17 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.30011450e-04, -5.69493236e-05,  1.62085005e-05,  4.72936024e-05,\n",
-       "        1.23458671e-04])"
+       "array([-1.24068627e-04, -4.47788196e-05,  2.73942975e-05,  3.63425862e-05,\n",
+       "        1.05110563e-04])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,30 +160,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1.67415842e-05, -4.64011721e-03, -4.65598287e-03,\n",
-       "        -2.66269782e-03, -8.96894578e-03, -2.92500977e-05,\n",
-       "        -3.91248690e-04, -6.00441358e-03, -1.85215079e-03],\n",
-       "       [ 6.61608210e-05, -1.32811313e-03, -1.64645294e-03,\n",
-       "        -2.02660136e-03, -1.83829200e-02,  2.15103215e-03,\n",
-       "        -2.54949470e-03,  7.20708228e-03,  6.65964047e-04],\n",
-       "       [ 4.16723506e-05,  8.69312973e-05,  1.11398695e-03,\n",
-       "        -5.68987739e-03,  1.04996309e-02,  1.04839577e-03,\n",
-       "        -3.17002623e-03, -5.02699259e-04, -1.50352385e-04],\n",
-       "       [-8.24625881e-05, -4.14101014e-04, -1.24260119e-03,\n",
-       "         1.80025437e-03, -3.76876464e-03,  2.02894984e-04,\n",
-       "         8.80034192e-04,  1.97080364e-03,  1.39844775e-03],\n",
-       "       [-8.62899937e-06,  6.29540006e-03,  6.43105005e-03,\n",
-       "         8.57892220e-03,  2.06209995e-02, -3.37307280e-03,\n",
-       "         5.23073542e-03, -2.67077308e-03, -6.19086173e-05]])"
+       "array([[-1.24068611e-04, -1.86310914e-05, -4.75407353e-03,\n",
+       "        -4.78118845e-03, -2.30247876e-03, -8.67242142e-03,\n",
+       "        -3.05326502e-04, -6.44952030e-04,  2.85653136e-03,\n",
+       "        -1.57510136e-03],\n",
+       "       [-4.47788129e-05,  6.91760119e-05, -8.51333340e-04,\n",
+       "        -1.28733562e-03, -1.60604986e-03, -1.67566151e-02,\n",
+       "         1.86253526e-03, -2.84635788e-03,  1.82725392e-03,\n",
+       "         4.15107267e-04],\n",
+       "       [ 2.73942939e-05,  4.22895692e-05,  5.68727075e-04,\n",
+       "         1.42584610e-03, -5.17578902e-03,  1.04349008e-02,\n",
+       "         1.39520187e-03, -3.34826109e-03, -4.23192745e-03,\n",
+       "        -1.52467076e-04],\n",
+       "       [ 3.63425814e-05, -9.74906458e-05, -4.19824189e-04,\n",
+       "        -1.07109238e-03,  1.39165662e-03, -3.18119209e-03,\n",
+       "         1.90648166e-04,  6.01464176e-04,  1.51825767e-03,\n",
+       "         1.09483461e-03],\n",
+       "       [ 1.05110549e-04,  4.65615618e-06,  5.45650398e-03,\n",
+       "         5.71377035e-03,  7.69266101e-03,  1.81753278e-02,\n",
+       "        -3.14305879e-03,  6.23810683e-03, -1.97011550e-03,\n",
+       "         2.17626569e-04]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,22 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 4, 2, 1, 4, 1, 4, 4, 0, 1, 0, 1, 4, 4, 2, 2, 1, 1, 4, 4, 4, 4,\n",
-       "       2, 0, 4, 1, 1, 2, 1, 2, 4, 4, 0, 4, 4, 2, 1, 4, 4, 4, 4, 2, 4, 4,\n",
-       "       4, 4, 0, 4, 4, 2, 0, 4, 2, 4, 4, 1, 2, 3, 4, 1, 1, 4, 0, 0, 4, 4,\n",
-       "       4, 1, 0, 4, 4, 4, 4, 4, 4, 4, 0, 4, 4, 4, 4, 4, 1, 4, 4, 4, 2, 4,\n",
-       "       2, 3, 3, 4, 4, 1, 4, 0, 1, 2, 4, 4, 4, 4, 0, 0, 0, 4, 3, 4, 4, 4,\n",
-       "       4, 4, 4, 4, 1, 4, 1, 4, 4, 4, 3, 4, 4, 4, 4, 4, 1, 4, 4, 4, 0, 2,\n",
+       "array([4, 2, 4, 4, 1, 2, 4, 4, 4, 4, 4, 2, 0, 4, 4, 2, 4, 4, 4, 4, 4, 2,\n",
+       "       4, 1, 1, 0, 4, 4, 1, 4, 2, 3, 4, 1, 2, 4, 2, 4, 2, 0, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 2, 4, 4, 3, 3, 4, 4, 4, 1, 4, 1, 4, 4, 0,\n",
+       "       1, 2, 0, 0, 0, 1, 4, 4, 2, 1, 1, 4, 2, 2, 2, 0, 4, 0, 4, 1, 4, 0,\n",
+       "       4, 4, 4, 4, 1, 4, 4, 1, 2, 4, 1, 4, 4, 4, 4, 2, 4, 4, 4, 4, 4, 2,\n",
+       "       2, 1, 4, 4, 1, 2, 4, 4, 2, 4, 4, 3, 0, 4, 4, 4, 0, 2, 3, 1, 2, 2,\n",
        "       4])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,22 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 4, 2, 1, 4, 1, 4, 4, 0, 1, 0, 1, 4, 4, 2, 2, 1, 1, 4, 4, 4, 4,\n",
-       "       2, 0, 4, 1, 1, 2, 1, 2, 4, 4, 0, 4, 4, 2, 1, 4, 4, 4, 4, 2, 4, 4,\n",
-       "       4, 4, 0, 4, 4, 2, 0, 4, 2, 4, 4, 1, 2, 3, 4, 1, 1, 4, 0, 0, 4, 4,\n",
-       "       4, 1, 0, 4, 4, 4, 4, 4, 4, 4, 0, 4, 4, 4, 4, 4, 1, 4, 4, 4, 2, 4,\n",
-       "       2, 3, 3, 4, 4, 1, 4, 0, 1, 2, 4, 4, 4, 4, 0, 0, 0, 4, 3, 4, 4, 4,\n",
-       "       4, 4, 4, 4, 1, 4, 1, 4, 4, 4, 3, 4, 4, 4, 4, 4, 1, 4, 4, 4, 0, 2,\n",
+       "array([4, 2, 4, 4, 1, 2, 4, 4, 4, 4, 4, 2, 0, 4, 4, 2, 4, 4, 4, 4, 4, 2,\n",
+       "       4, 1, 1, 0, 4, 4, 1, 4, 2, 3, 4, 1, 2, 4, 2, 4, 2, 0, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 2, 4, 4, 3, 3, 4, 4, 4, 1, 4, 1, 4, 4, 0,\n",
+       "       1, 2, 0, 0, 0, 1, 4, 4, 2, 1, 1, 4, 2, 2, 2, 0, 4, 0, 4, 1, 4, 0,\n",
+       "       4, 4, 4, 4, 1, 4, 4, 1, 2, 4, 1, 4, 4, 4, 4, 2, 4, 4, 4, 4, 4, 2,\n",
+       "       2, 1, 4, 4, 1, 2, 4, 4, 2, 4, 4, 3, 0, 4, 4, 4, 0, 2, 3, 1, 2, 2,\n",
        "       4], dtype=int64)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 5.259428  , -3.42102193,  2.6412508 , -7.38767275,  2.90801587])"
+       "array([-1.05140549, -1.75047762,  1.12979081, -1.21480906,  2.88690136])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,17 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([9.94828605e-01, 3.16448979e-02, 9.33469686e-01, 6.18451744e-04,\n",
-       "       9.48241271e-01])"
+       "array([0.2589553 , 0.14798697, 0.75580029, 0.22885125, 0.94719511])"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,22 +305,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 4, 2, 1, 4, 1, 4, 4, 0, 1, 0, 1, 4, 4, 2, 2, 1, 1, 4, 4, 4, 4,\n",
-       "       2, 0, 4, 1, 1, 2, 1, 2, 4, 4, 0, 4, 4, 2, 1, 4, 4, 4, 4, 2, 4, 4,\n",
-       "       4, 4, 0, 4, 4, 2, 0, 4, 2, 4, 4, 1, 2, 3, 4, 1, 1, 4, 0, 0, 4, 4,\n",
-       "       4, 1, 0, 4, 4, 4, 4, 4, 4, 4, 0, 4, 4, 4, 4, 4, 1, 4, 4, 4, 2, 4,\n",
-       "       2, 3, 3, 4, 4, 1, 4, 0, 1, 2, 4, 4, 4, 4, 0, 0, 0, 4, 3, 4, 4, 4,\n",
-       "       4, 4, 4, 4, 1, 4, 1, 4, 4, 4, 3, 4, 4, 4, 4, 4, 1, 4, 4, 4, 0, 2,\n",
+       "array([4, 2, 4, 4, 1, 2, 4, 4, 4, 4, 4, 2, 0, 4, 4, 2, 4, 4, 4, 4, 4, 2,\n",
+       "       4, 1, 1, 0, 4, 4, 1, 4, 2, 3, 4, 1, 2, 4, 2, 4, 2, 0, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 2, 4, 4, 3, 3, 4, 4, 4, 1, 4, 1, 4, 4, 0,\n",
+       "       1, 2, 0, 0, 0, 1, 4, 4, 2, 1, 1, 4, 2, 2, 2, 0, 4, 0, 4, 1, 4, 0,\n",
+       "       4, 4, 4, 4, 1, 4, 4, 1, 2, 4, 1, 4, 4, 4, 4, 2, 4, 4, 4, 4, 4, 2,\n",
+       "       2, 1, 4, 4, 1, 2, 4, 4, 2, 4, 4, 3, 0, 4, 4, 4, 0, 2, 3, 1, 2, 2,\n",
        "       4], dtype=int64)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 93.98496240601504%\n"
+      "accuracy: 90.97744360902256%\n"
      ]
     }
    ],
@@ -361,17 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.06004063, 0.08077949, 0.03625793, 0.27258364, 0.2359054 ,\n",
-       "       0.09451042, 0.08854979, 0.02118138, 0.11019132])"
+       "array([0.06270882, 0.08313687, 0.03497778, 0.24729606, 0.23419928,\n",
+       "       0.106874  , 0.11485164, 0.01909426, 0.09686128])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,22 +390,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 4, 4, 4, 4, 1, 1, 2, 2, 3, 2, 4, 1, 1, 4, 2, 4, 1, 2, 4, 1, 4,\n",
-       "       3, 3, 4, 4, 2, 4, 2, 2, 4, 4, 4, 2, 4, 2, 3, 4, 2, 2, 3, 1, 1, 2,\n",
-       "       2, 4, 1, 2, 4, 2, 1, 2, 2, 2, 2, 0, 1, 3, 4, 1, 2, 4, 4, 4, 4, 1,\n",
-       "       4, 4, 4, 1, 4, 0, 2, 2, 2, 3, 4, 2, 4, 1, 1, 1, 0, 1, 3, 4, 2, 2,\n",
-       "       4, 4, 0, 2, 1, 2, 2, 4, 1, 0, 4, 1, 4, 0, 0, 1, 4, 2, 1, 4, 1, 4,\n",
-       "       4, 2, 2, 4, 1, 4, 2, 0, 1, 4, 2, 1, 2, 4, 4, 3, 2, 2, 1, 2, 4, 4,\n",
-       "       2])"
+       "array([3, 2, 3, 2, 2, 4, 2, 3, 1, 4, 2, 2, 3, 4, 2, 4, 4, 1, 1, 3, 0, 0,\n",
+       "       3, 2, 1, 4, 4, 4, 0, 1, 1, 4, 4, 1, 3, 4, 4, 4, 4, 4, 2, 1, 3, 4,\n",
+       "       2, 3, 2, 2, 4, 2, 1, 2, 3, 4, 4, 4, 4, 2, 1, 3, 2, 2, 4, 2, 2, 4,\n",
+       "       2, 4, 2, 4, 2, 4, 4, 3, 2, 4, 4, 4, 2, 1, 4, 2, 3, 2, 4, 2, 2, 2,\n",
+       "       1, 4, 1, 4, 2, 4, 4, 2, 1, 2, 1, 4, 4, 4, 3, 3, 4, 4, 2, 2, 4, 2,\n",
+       "       4, 4, 2, 0, 0, 4, 1, 4, 2, 4, 4, 3, 4, 4, 3, 1, 0, 2, 1, 2, 2, 2,\n",
+       "       1])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
